--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document 
-    </title>
+    <title>Toboolist VueJS</title>
      <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -14,41 +13,27 @@
         <span>Toboolist</span>
     </header >
 
-    <main>
+    <main id="app" v-cloak>
 
         <div id="btns">
 
             <button class="btn_general" id="btn1">Add Task</button>
-            <button class="btn_general" id="btn2">Add Section</button>
 
         </div>
 
         <div id="lists">
 
             <h2>&#9207; New Task</h2>
-            <ul> 
-                <li><span class="check">&check; </span> Quarterly Newsletter <span class="blue_tag etichetta">Editorial</span></li>
+            <ul v-for="(item, index) in list"> 
+                <li :class="{ done: item.done}">{{ item.text }}</li>
             </ul>
 
-            <h2>&#9207; Today</h2>
-            <ul> 
-                <li><span class="check">&check; </span> Recruiting blog post <span class="blue_tag etichetta">Editorial</span></li>
-                <li><span class="check">&check; </span> Mobile app launch <span class="etichetta" id="purple_tag">Q1 Goals</span></li>
-                <li><span class="cross">&#x2717;</span> Interview John H. <span class="etichetta" id="teal_tag">Recruiting</span></li>
-                <li><span class="check">&check; </span> Summit update to mobile storefronts <span class="etichetta" id="orange_tag">Mobile</span></li>
-            </ul>
-
-            <h2>&#9207; Upcoming</h2>
-            <ul> 
-                <li><span class="cross">&#x2717;</span> Schedule meeting with Alex</li>
-                <li><span class="check">&check; </span> Homepage refresh <span class="etichetta" id="pink_tag">Website</span></li>
-                <li><span class="check">&check; </span> Onboard new Sales team members <span class="etichetta" id="green_tag">Sales</span></li>
-                <li><span class="check">&check; </span> Review editorial calendar <span class="blue_tag etichetta">Editorial</span></li>
-            </ul>
 
         </div>
 
     </main>
 
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="./main.js"></script>
 </body>
 </html>
