--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main id="app" v-cloak>
 
-        <div id="btns">
+        <div class="btns">
 
             <button class="btn_general" id="btn1">Add Task</button>
 
@@ -25,7 +25,10 @@
 
             <h2>&#9207; New Task</h2>
             <ul v-for="(item, index) in list"> 
-                <li :class="{ done: item.done}">{{ item.text }}</li>
+                <li :class="{ done: item.done}">
+                    <span>{{ item.text }}</span>
+                    <button @click="deleteItem(index)" class="btns" style="color: rgb(207, 8, 8);">&#10005;</button>
+                </li>
             </ul>
 
 
