[UPD] Reached third milestone: added a text input and binded it with v-model to a variable in data(). Then added a function to push the text inside the array of objects

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         <div class="btns">
 
-            <button class="btn_general" id="btn1">Add Task</button>
-
+            <input v-model="newTodo" class="btn_general" type="text">
+            <button @click="addTask()" class="btn_general" id="btn1">Add Task</button>
+            
         </div>
 
         <div id="lists">
